--- a/mcu/.vscode/settings.json
+++ b/mcu/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "terminal.integrated.env.osx": {
-        "PATH": "/Users/tanner/.platformio/penv/bin:/Users/tanner/.platformio/penv:/Users/tanner/.virtualenvs/rover_serial/bin:/Users/tanner/bin:/usr/local/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/go/bin:/bin:/Users/tanner/dev/go/bin:/Applications/Visual Studio Code.app/Contents/Resources/app/bin",
+        "PATH": "/Users/tanner/.platformio/penv/bin:/Users/tanner/.platformio/penv:/Users/tanner/bin:/usr/local/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/go/bin:/bin:/Users/tanner/dev/go/bin:/Applications/Visual Studio Code.app/Contents/Resources/app/bin",
         "PLATFORMIO_CALLER": "vscode"
     },
     "files.associations": {
@@ -8,6 +8,7 @@
         "type_traits": "cpp",
         "thread": "cpp",
         "array": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "rope": "cpp"
     }
 }
