--- a/mcu/platformio.ini
+++ b/mcu/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:huzzah]
-platform = espressif8266
-board = huzzah
+[env:uno]
+platform = atmelavr
+board = uno
 framework = arduino
