--- a/mcu/platformio.ini
+++ b/mcu/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:uno]
+[env:mcu]
 platform = atmelavr
-board = micro
+board = leonardo
 framework = arduino
 
 lib_deps =
