Add convenience computed properties, light description field

--- a/ios/Rover Cam/Rover Cam/config.json
+++ b/ios/Rover Cam/Rover Cam/config.json
@@ -37,7 +37,8 @@
     "lights": [
         {
             "id": 1,
-            "numLights": 8
+            "numLights": 8,
+            "description": "Light Bar"
         }
     ]
 }
