Better config, fixed constraints, better UDP payload.

--- a/ios/Rover Cam/Rover Cam/config.json
+++ b/ios/Rover Cam/Rover Cam/config.json
@@ -5,6 +5,7 @@
         "mjpegUrl": "http://192.168.1.16:8000",
         "servos": []
     },
+    "pollHz": 60,
     "servos": [
         {
             "type": "forwardReverse",
