--- a/ios/Rover Cam/Rover Cam/config.json
+++ b/ios/Rover Cam/Rover Cam/config.json
@@ -10,9 +10,9 @@
         {
             "type": "forwardReverse",
             "config": {
-                "id": 1,
-                "max": 1,
-                "min": -1,
+                "id": 2,
+                "max": 0.5,
+                "min": -0.5,
                 "trim": 0,
                 "inverted": true
             }
@@ -20,9 +20,9 @@
         {
             "type": "steeringFront",
             "config": {
-                "id": 2,
-                "max": 1,
-                "min": -1,
+                "id": 1,
+                "max": 0.3,
+                "min": -0.4,
                 "trim": 0,
                 "inverted": true
             }
@@ -30,11 +30,11 @@
         {
             "type": "steeringRear",
             "config": {
-                "id": 3,
-                "max": 1,
-                "min": -1,
+                "id": 4,
+                "max": 0.4,
+                "min": -0.4,
                 "trim": 0,
-                "inverted": true
+                "inverted": false
             }
         }
     ],
